# Catflix

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.client  Dockerfile.tests  Dockerfile.web  Makefile  README.md  a.out  details.txt  details.txt.txt  docker-compose.yml  main  package.json  server
catflix_android/: local.properties
data/: userData.txt
nodeJS_Server/: app.js  package-lock.json  package.json
nodeJS_Server/Utills/: utills.js
nodeJS_Server/controllers/: category.js  movie.js  recommend.js  search.js  token.js  user.js  videoPlayer.js
nodeJS_Server/models/: category.js  movie.js  user.js
nodeJS_Server/routes/: category.js  movie.js  token.js  user.js  videoPlayer.js
nodeJS_Server/services/: category.js  movie.js  recommend.js  search.js  token.js  user.js  videoPlayer.js
part3/: app.js  package.json
part3/config/: .env.docker  .env.local
part3/controllers/: category.js  movie.js  recommend.js  search.js  token.js  user.js
part3/models/: category.js  movie.js  user.js
part3/routes/: category.js  movie.js  search.js  token.js  user.js
part3/services/: category.js  movie.js  recommend.js  search.js  token.js  user.js
react_client/: package-lock.json  package.json
react_client/src/: App.js  index.js
src/: AddCommand.cpp  App.cpp  App.h  Catflix.out  ConsoleMenu.cpp  ConsoleMenu.h  Dockerfile  Help.cpp  HelpCommand.cpp  HelpCommand.h  ICommand.h  IMenu.h  Ihelp.h  Makefile  Movie.cpp  Movie.h  RecommendCommand.cpp  User.cpp  User.h  a.out  atflix.out  b.out  definers.h  main.cpp  util.cpp  util.h
src/ClientSide/: client.py
src/Commands/: AddCommand.cpp  DeleteCommand.cpp  HelpCommand.cpp  PatchCommand.cpp  PostCommand.cpp  RecommendCommand.cpp
src/Headers/: AddCommand.h  App.h  (+10 more)
wiki/: android.md  general.md  react.md
(+70 files in other folders)
